fix dependencies after 6 to 7 migration, added small spacing before the footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ html {
   min-height: 100%;
 }
 body {
-  margin-bottom: 40px !important;
+  margin-bottom: 50px !important;
 }
 .footer {
   position: absolute;
